dark mode code bg fix

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -2,6 +2,9 @@ code {
   background-color: #f2f2f2;
   padding: 2px 5px;
 }
+html.dark code {
+  background-color: #333;
+}
 pre > code {
   background-color: transparent;
   padding: 0;
